--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
+body {
+  background: #f5f5f5;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 1.4em;
+  margin: 0;
+  padding: 0;color: brown;
+  font-style: italic;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background: #fff;
+  margin: 130px 0 40px 0;
+  position: relative;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+  width: 56vw;
+  margin-left:23%;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 15px;
+}
+
+.App-header h1 {
+  font-size: 100px;
+  font-weight: 100;
+  color: brown;
+  text-align: center;
+}
+
+.App-header input {
+  width: 60%;
+  padding: 16px;
+  border: none;
+  font-size: 24px;
+  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+  margin-left: 22%;
+  border: 1px solid brown;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+li {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 15px;
+  border-bottom: 1px solid #ededed;
 }
 
-.App-link {
-  color: #61dafb;
+li.completed label {
+  text-decoration: line-through;
+  color: #d9d9d9;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+button {
+  margin-left: auto;
+  background: none;
+  border: none;
+  color: #cc9a9a;
+  cursor: pointer;
+}
+
+button:hover {
+  color: #af5b5e;
+}
+.filters{
+  display :flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2em;
 }
