--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   padding: 0;
   color: brown;
   font-style: italic;
+  box-sizing: border-box;
 }
 
 .App {
@@ -13,239 +14,376 @@ body {
   margin: 130px auto 40px;
   position: relative;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
-  width: 56vw;
+  width: 80%;
 }
 
 .App-header {
-  padding: 15px;
+  padding: 20px 30px;
+  border-bottom: 1px solid #ededed;
 }
 
 .App-header h1 {
+  position: absolute;
+  top: -155px;
+  width: 100%;
   font-size: 100px;
   font-weight: 100;
-  color: brown;
   text-align: center;
+  color: brown;
+  text-rendering: optimizeLegibility;
 }
 
 .App-header input {
-  width: 60%;
-  padding: 16px;
+  padding: 16px 16px 16px 60px;
   border: none;
+  background: rgba(0, 0, 0, 0.03);
+  width: 60%;
   font-size: 24px;
-  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
+  font-family: inherit;
+  font-style: italic;
+  box-sizing: border-box;
+  color: inherit;
   margin-left: 20%;
   border: 1px solid brown;
-  font-weight: bold;
-  font-style: italic;
-  font-size: 1.1em;
+}
+
+.App-header input:focus {
+  outline: none;
 }
 
 ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  width: 100%;
 }
 
 li {
-  display: flex;
-  align-items: center;
-  padding: 15px;
-  border-bottom: 1px solid #ededed;
+  position: relative;
+  font-size: 1em;
 }
 
 li.completed label {
-  text-decoration: line-through;
   color: #d9d9d9;
+  text-decoration: line-through;
 }
 
-input[type="checkbox"] {
+li .todo-content {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+}
+
+li .todo-content input[type='checkbox'] {
+  width: 40px;
+  height: auto;
+  margin: 0;
+}
+
+li .todo-content label {
+  word-break: break-all;
+  padding: 15px;
+}
+
+li .todo-content button {
+  margin-left: auto;
+  background: none;
+  border: none;
+  color: brown;
+  margin: 0 0 0 10px;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+li .todo-content button:hover {
+  color: #af5b5e;
+}
+
+.todo-details {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  justify-content: space-between;
+  gap: 10px; /* Add some gap between elements */
+}
+
+.sub-todo-input,
+.description,
+.picture {
   margin-right: 10px;
 }
 
-button {
-  margin-left: auto;
-  background: none;
-  border: 1px solid brown;
-  color: brown;
-  cursor: pointer;
-  font-weight: bold;
-  font-size: 1em;
-  padding: 5px 10px;
-  margin-left: 10px;
+.sub-todos {
+  margin-left: 2em;
+  width: 100%;
 }
 
-button:hover {
-  color: #af5b5e;
-  border-color: #af5b5e;
+.todo-picture {
+  border: 1px solid grey;
+  height: 28vh;
+  margin: 1em;
+  width: 15vw;
+  float: right;
+}
+
+.description {
+  border: 1px solid brown;
+  height: 30vh;
+  width: 15vw;
+  font-size: 1.3em;
+  margin: 1em;
+  
+
+}
+.sub-todo-input{
+  border: 1px solid brown;
+  height: 2vh;
+  margin: 1em;
+}
+
+.picture {
+  body {
+    background: #f5f5f5;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    line-height: 1.4em;
+    margin: 0;
+    padding: 0;
+    color: brown;
+    font-style: italic;
+  }
+  
+  .App {
+    background: #fff;
+    margin: 130px auto 40px;
+    position: relative;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+    width: 80%;
+  }
+  
+  .App-header {
+    padding: 20px 30px;
+    border-bottom: 1px solid #ededed;
+  }
+  
+  .App-header h1 {
+    position: absolute;
+    top: -155px;
+    width: 100%;
+    font-size: 100px;
+    font-weight: 100;
+    text-align: center;
+    color: brown;
+    text-rendering: optimizeLegibility;
+  }
+  
+  .App-header input {
+    padding: 16px 16px 16px 60px;
+    border: none;
+    background: rgba(0, 0, 0, 0.03);
+    width: 60%;
+    font-size: 24px;
+    font-family: inherit;
+    font-style: italic;
+    box-sizing: border-box;
+    color: inherit;
+    margin-left: 20%;
+    border: 2px solid brown;
+  }
+  
+  .App-header input:focus {
+    outline: none;
+  }
+  
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    width: 100%;
+  }
+  
+  li {
+    position: relative;
+    font-size: 1em;
+  }
+  
+  li.completed label {
+    color: #d9d9d9;
+    text-decoration: line-through;
+  }
+  
+  li .todo-content {
+    display: flex;
+    align-items: center;
+    padding: 15px;
+  }
+  
+  li .todo-content input[type='checkbox'] {
+    width: 40px;
+    height: auto;
+    margin: 0;
+  }
+  
+  li .todo-content label {
+    word-break: break-all;
+    padding: 15px;
+  }
+  
+  li .todo-content button {
+    margin-left: auto;
+    background: none;
+    border: none;
+    color: brown;
+    margin: 0 0 0 10px;
+    padding: 10px;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  li .todo-content button:hover {
+    color: #af5b5e;
+  }
+  
+  .todo-details {
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    gap: 10px; /* Add some gap between elements */
+  }
+  
+  .sub-todo-input,
+  .description,
+  .picture {
+    margin-right: 10px;
+  }
+  
+  .sub-todos {
+    margin-left: 2em;
+    width: 100%;
+  }
+  
+  .todo-picture {
+    border: 1px solid grey;
+    height: 28vh;
+    margin: 1em;
+    width: 20vw;
+  }
+  
+  .description {
+ 
+    height: 25vh;
+    width: 13vw;
+    font-size: 1em;
+  }
+  
+  .picture {
+    margin-top: 10px;
+  }
+  
+  .filters {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 7em;
+    padding: 1em;
+  }
+  
+  .filters button {
+    margin: 0 5px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0.5em;
+  }
+  
+  .filters .selected {
+    border: 1px solid rgba(175, 47, 47, 0.2);
+    border-radius: 3px;
+    padding: 3px 7px;
+  }
+  
+  .btnn {
+    color: brown;
+    font-weight: bold;
+  }
+  
+  @media (max-width: 550px) {
+    .App {
+      width: 100%;
+      box-shadow: none;
+      margin-top: 50px;
+    }
+  
+    .App-header input {
+      width: 80%;
+      margin-left: 10%;
+    }
+  
+    .filters {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  
+    .filters button {
+      margin-top: 5px;
+    }
+  
+    .sub-todos {
+      width: 100%;
+    }
+  }
+  
 }
 
 .filters {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 2em;
+  gap: 7em;
+  padding: 1em;
 }
 
-.description,
-.picture,
-.sub-todo-input {
-  display: block;
-  width: 80%;
-  margin: 10px auto;
-  padding: 10px;
-  border: 1px solid brown;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 1em;
-  font-style: italic;
+.filters button {
+  margin: 0 5px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0.5em;
 }
 
-.sub-todos {
-  border-top: 1px solid red;
-  margin-top: 10px;
+.filters .selected {
+  border: 1px solid rgba(175, 47, 47, 0.2);
+  border-radius: 3px;
+  padding: 3px 7px;
 }
 
-.todo-picture {
-  margin-top: 10px;
-  max-height: 200px;
-  max-width: 100%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.btnn {
+  color: brown;
+  font-weight: bold;
 }
 
+@media (max-width: 550px) {
+  .App {
+    width: 100%;
+    box-shadow: none;
+    margin-top: 50px;
+  }
 
-@media(max-width:600px){
-  .App{ width: 70%;
-    margin-left: 17%;
-}
-  .App-header{
-    width: 22vw;
-    font-size: 2.5vw;
-    display: flex;
-    align-items: center;
+  .App-header input {
+    width: 80%;
+    margin-left: 10%;
+  }
+
+  .filters {
     flex-direction: column;
-    margin-left: 3%;
-    font-size: 0.8em;
-  }
-  .App-header h1{
-    font-size: 2.8em;
-    margin-left:37vw;
-    
-  }
-  .App-header input{
-    width: 35vw;
-    height: 1vh;
-    font-size: 1.2em;
-    margin-left: 35vw;
-    font-size: 0.7em;
-   
-  }
-  button{
-    font-size: 0.8em;
-  }
-  .filters{
-    display: flex;
-    flex-direction: column;
-   align-items: center;
-   font-size: 0.9em;
-    gap: 1em;
-  
-   
-  }
-  .selected{
-    margin-right: 6em;
-
-    padding: 1.2em;
+    align-items: flex-start;
   }
 
-}
-@media((min-width: 481px) and (max-width: 768px)){
-  .App{
-    height: 90Vh;
-    width: 80vw;
-    margin-left:10%;
-
-  }
-  .App-header{
-    width: 50vw;
-    font-size: 2.9vw;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-  
-    margin-left: 3%;
-    margin-bottom: 1.3em;
-    
-    
-  
-  }
-  .App-header h1{
-    font-size: 3.8em;
-    margin-left: 50%
-    
-  }
-  .App-header input{
-    width: 50vw;
-    height: 5vh;
-    margin-left:25%;
-    font-size: 1.2em;
-    gap: 4em;}
-  .filters{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 3.5em;
-    font-size: 1em;
-  }
-  li{
-    font-size: 1.4em;
+  .filters button {
+    margin-top: 5px;
   }
 
- 
-}
-@media(min-width: 769px) and (max-width: 1024px){
-  .App{
-    height:100Vh;
-    width: 90vw;
-    margin-left:10%;
-
+  .sub-todos {
+    width: 100%;
   }
-  .App-header{
-    width: 70vw;
-    font-size: 2.9vw;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-  
-    margin-left: 3%;
-    margin-bottom: 1.3em;
-    
-    
-  
-  }
-  .App-header h1{
-    font-size: 3.8em;
-    margin-left: 50%
-    
-  }
-  .App-header input{
-    width: 50vw;
-    height: 5vh;
-    margin-left:25%;
-    font-size: 1.2em;
-    gap: 4em;}
-  .filters{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4.5em;
-    font-size: 1em;
-  }
-  li{
-    font-size: 1.4em;
-  }
-
-
 }
