--- a/src/App.css
+++ b/src/App.css
@@ -112,282 +112,21 @@ li .todo-content button:hover {
   gap: 10px; /* Add some gap between elements */
 }
 
-.sub-todo-input,
-.description,
-.picture {
-  margin-right: 10px;
-}
-
-.sub-todos {
-  margin-left: 2em;
-  width: 100%;
-}
-
-.todo-picture {
-  border: 1px solid grey;
-  height: 28vh;
-  margin: 1em;
-  width: 15vw;
-  float: right;
-}
-
-.description {
-  border: 1px solid brown;
-  height: 30vh;
-  width: 15vw;
-  font-size: 1.3em;
-  margin: 1em;
-  
-
-}
-.sub-todo-input{
-  border: 1px solid brown;
-  height: 2vh;
-  margin: 1em;
-}
-
-.picture {
-  body {
-    background: #f5f5f5;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    line-height: 1.4em;
-    margin: 0;
-    padding: 0;
-    color: brown;
-    font-style: italic;
-  }
-  
-  .App {
-    background: #fff;
-    margin: 130px auto 40px;
-    position: relative;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
-    width: 80%;
-  }
-  
-  .App-header {
-    padding: 20px 30px;
-    border-bottom: 1px solid #ededed;
-  }
-  
-  .App-header h1 {
-    position: absolute;
-    top: -155px;
-    width: 100%;
-    font-size: 100px;
-    font-weight: 100;
-    text-align: center;
-    color: brown;
-    text-rendering: optimizeLegibility;
-  }
-  
-  .App-header input {
-    padding: 16px 16px 16px 60px;
-    border: none;
-    background: rgba(0, 0, 0, 0.03);
-    width: 60%;
-    font-size: 24px;
-    font-family: inherit;
-    font-style: italic;
-    box-sizing: border-box;
-    color: inherit;
-    margin-left: 20%;
-    border: 2px solid brown;
-  }
-  
-  .App-header input:focus {
-    outline: none;
-  }
-  
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    width: 100%;
-  }
-  
-  li {
-    position: relative;
-    font-size: 1em;
-  }
-  
-  li.completed label {
-    color: #d9d9d9;
-    text-decoration: line-through;
-  }
-  
-  li .todo-content {
-    display: flex;
-    align-items: center;
-    padding: 15px;
-  }
-  
-  li .todo-content input[type='checkbox'] {
-    width: 40px;
-    height: auto;
-    margin: 0;
-  }
-  
-  li .todo-content label {
-    word-break: break-all;
-    padding: 15px;
-  }
-  
-  li .todo-content button {
-    margin-left: auto;
-    background: none;
-    border: none;
-    color: brown;
-    margin: 0 0 0 10px;
-    padding: 10px;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  
-  li .todo-content button:hover {
-    color: #af5b5e;
-  }
-  
-  .todo-details {
-    display: flex;
-    align-items: center;
-    padding: 15px;
-    gap: 10px; /* Add some gap between elements */
-  }
-  
-  .sub-todo-input,
-  .description,
-  .picture {
-    margin-right: 10px;
-  }
-  
-  .sub-todos {
-    margin-left: 2em;
-    width: 100%;
-  }
-  
-  .todo-picture {
-    border: 1px solid grey;
-    height: 28vh;
-    margin: 1em;
-    width: 20vw;
-  }
-  
-  .description {
- 
-    height: 25vh;
-    width: 13vw;
-    font-size: 1em;
-  }
-  
-  .picture {
-    margin-top: 10px;
-  }
-  
-  .filters {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 7em;
-    padding: 1em;
-  }
-  
-  .filters button {
-    margin: 0 5px;
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 0.5em;
-  }
-  
-  .filters .selected {
-    border: 1px solid rgba(175, 47, 47, 0.2);
-    border-radius: 3px;
-    padding: 3px 7px;
-  }
-  
-  .btnn {
-    color: brown;
-    font-weight: bold;
-  }
-  
-  @media (max-width: 550px) {
-    .App {
-      width: 100%;
-      box-shadow: none;
-      margin-top: 50px;
-    }
-  
-    .App-header input {
-      width: 80%;
-      margin-left: 10%;
-    }
-  
-    .filters {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .filters button {
-      margin-top: 5px;
-    }
-  
-    .sub-todos {
-      width: 100%;
-    }
-  }
-  
-}
-
-.filters {
+.filters{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 7em;
   padding: 1em;
 }
-
-.filters button {
-  margin: 0 5px;
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 0.5em;
-}
-
-.filters .selected {
-  border: 1px solid rgba(175, 47, 47, 0.2);
-  border-radius: 3px;
-  padding: 3px 7px;
-}
-
-.btnn {
+.filter-item{
   color: brown;
+  background-color: white;
+  border: none;
   font-weight: bold;
+  font-style: italic;
+  font-size: 1.1em;
 }
 
-@media (max-width: 550px) {
-  .App {
-    width: 100%;
-    box-shadow: none;
-    margin-top: 50px;
-  }
 
-  .App-header input {
-    width: 80%;
-    margin-left: 10%;
-  }
-
-  .filters {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .filters button {
-    margin-top: 5px;
-  }
-
-  .sub-todos {
-    width: 100%;
-  }
-}
+  
+  
