--- a/src/App.css
+++ b/src/App.css
@@ -1,132 +1,3 @@
-body {
-  background: #f5f5f5;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  line-height: 1.4em;
-  margin: 0;
-  padding: 0;
-  color: brown;
-  font-style: italic;
-  box-sizing: border-box;
+.sidebar-item {
+  @apply flex items-center p-3 text-gray-700 hover:bg-gray-200 cursor-pointer rounded-lg;
 }
-
-.App {
-  background: #fff;
-  margin: 130px auto 40px;
-  position: relative;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
-  width: 80%;
-}
-
-.App-header {
-  padding: 20px 30px;
-  border-bottom: 1px solid #ededed;
-}
-
-.App-header h1 {
-  position: absolute;
-  top: -155px;
-  width: 100%;
-  font-size: 100px;
-  font-weight: 100;
-  text-align: center;
-  color: brown;
-  text-rendering: optimizeLegibility;
-}
-
-.App-header input {
-  padding: 16px 16px 16px 60px;
-  border: none;
-  background: rgba(0, 0, 0, 0.03);
-  width: 60%;
-  font-size: 24px;
-  font-family: inherit;
-  font-style: italic;
-  box-sizing: border-box;
-  color: inherit;
-  margin-left: 20%;
-  border: 1px solid brown;
-}
-
-.App-header input:focus {
-  outline: none;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  width: 100%;
-}
-
-li {
-  position: relative;
-  font-size: 1em;
- 
-  
-}
-
-li.completed label {
-  color: #d9d9d9;
-  text-decoration: line-through;
-}
-
-li .todo-content {
-  display: flex;
-  align-items: center;
-  padding: 15px;
-  justify-content: space-between;
-  
-}
-
-li .todo-content input[type='checkbox'] {
-  width: 40px;
-  height: auto;
-  margin: 0;
-}
-
-li .todo-content label {
-  word-break: break-all;
-  padding: 15px;
-}
-
-li .todo-content button {
-  margin-left: auto;
-  background: none;
-  border: none;
-  color: brown;
-  margin: 0 0 0 10px;
-  padding: 10px;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-li .todo-content button:hover {
-  color: #af5b5e;
-}
-
-.todo-details {
-  display: flex;
-  align-items: center;
-  padding: 15px;
-  justify-content: space-between;
-  gap: 10px; /* Add some gap between elements */
-}
-
-.filters{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1em;
-}
-.filter-item{
-  color: brown;
-  background-color: white;
-  border: none;
-  font-weight: bold;
-  font-style: italic;
-  font-size: 1.1em;
-}
-
-
-  
-  
